syntax = "proto3";
option go_package = "./;pb";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "problem.proto";

// 题目服务接口
service ProblemService {
  // 新增题目
  rpc CreateProblem(CreateProblemRequest) returns (CreateProblemResponse){
    option (google.api.http) = {
      post: "/api/v1/problem/create"
      body: "*"
    };
  };
  // 上传配置文件
  rpc UploadConfig(stream UploadConfigFileChunk) returns (UploadConfigResponse){
    option (google.api.http) = {
      post: "/api/v1/problem/upload_config"
      body: "*"
    };
  };
  // 发布题目
  rpc PublishProblem(PublishProblemRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      post: "/api/v1/problem/publish"
      body: "*"
    };
  };
  // 更新题目信息
  rpc UpdateProblem(UpdateProblemRequest) returns (UpdateProblemResponse){
    option (google.api.http) = {
      post: "/api/v1/problem/update"
      body: "*"
    };
  };
  // 删除题目
  rpc DeleteProblem(DeleteProblemRequest) returns (DeleteProblemResponse){
    option (google.api.http) = {
      delete: "/api/v1/problem"
    };
  };
  // 获取tag列表
  rpc GetTagList(google.protobuf.Empty) returns (GetTagListResponse){
    option (google.api.http) = {
      get: "/api/v1/problem/tag_list"
    };
  };
  // 获取题目列表
  rpc GetProblemList(GetProblemListRequest) returns (GetProblemListResponse){
    option (google.api.http) = {
      get: "/api/v1/problem/list"
    };
  };
  // 查询题目详情
  rpc GetProblemDetail(GetProblemRequest) returns (GetProblemResponse){
    option (google.api.http) = {
      get: "/api/v1/problem/detail"
    };
  };
  // 获取题目配置
  rpc GetProblemConfig(GetProblemConfigRequest) returns (GetProblemConfigResponse){
    option (google.api.http) = {
      get: "/api/v1/problem/config"
    };
  };
  // 提交
  rpc SubmitProblem(SubmitProblemRequest) returns (SubmitProblemResponse){
    option (google.api.http) = {
      post: "/api/v1/problem/submit"
      body: "*"
    };
  };
}

// 新增题目
message CreateProblemRequest {
  string title = 1;
  string description = 2;
  int32 level = 3;
  repeated string tags = 4;
}
message CreateProblemResponse {
  int64 id = 1;
}

// 上传配置文件
message UploadConfigFileChunk {
  int64 problem_id = 1;
  bytes content = 2; // 文件分片内容
}
message UploadConfigResponse {
  string file_path = 1;    // 服务端最终存储路径
  int64 size = 2;          // 文件大小(字节)
}

// 发布题目
message PublishProblemRequest {
  int64 id = 1;
}

// 更新题目
message UpdateProblemRequest {
  Problem data = 1;
}
message UpdateProblemResponse {
  int64 id = 1;
  string message = 2;
}

// 删除题目
message DeleteProblemRequest {
  int64 id = 1;
}
message DeleteProblemResponse {
  string message = 1;
}

// 查询题目列表
// 使用偏移量分页
message GetProblemListRequest {
  int32 page = 1;
  int32 page_size = 2;
  string keyword = 3;
  string tag = 4;
}
message GetProblemListResponse {
  int64 total = 1;
  repeated Problem data = 2;
}

// 获取题目详情
message GetProblemRequest{
  int64 id = 1;
}
message GetProblemResponse{
  Problem problem = 1;
}

// 获取题目配置
message GetProblemConfigRequest{
  int64 id = 1;
}
message GetProblemConfigResponse{
  ProblemConfig problem_config = 1;
}

// tags
message GetTagListResponse {
  repeated string data = 1;
}

// 提交
message SubmitProblemRequest {
  int64 problem_id = 1;
  string title = 2;
  string lang = 3;
  string code = 4;
}
message SubmitProblemResponse {
  string task_id = 1;
  string message = 2;
}
